--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<h1>html 수정</h1>
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ESG 점프업인턴십</title>
+  </head>
+  <body>
+    <p class="test">점프업 인턴십</p>
+    <select>
+      <option>점프업</option>
+      <option>인턴십</option>
+    </select>
+    <br />
+    <input type="text" placeholder="내용을 입력하세요" />
+    <button>클릭</button>
+    <br />
+    <img
+      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSxFkTGKnJoUHyVN4yvgcBhyKw0glxaNRPzYQ&usqp=CAU"
+      alt="푸바오"
+    />
+    <video src="https://www.youtube.com/watch?v=dgzxzF4td7I"></video>
+  </body>
+</html>
