--- a/exp.html
+++ b/exp.html
@@ -1,18 +1,34 @@
-<link rel="stylesheet" href="style.css"
-<header><h3>introduing page</h3></header>
-<nav>안녕하세요!</nav>
-<section>
-  <img
-    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSxFkTGKnJoUHyVN4yvgcBhyKw0glxaNRPzYQ&usqp=CAU"
-  />
-  <article>
-    <h2>Aout me</h2>
-    <p>😊 simeee</p>
-    <ul>
-        <li>✍️ backend </li>
-        <li>📞 010-1234-5678</li>
+<link rel="stylesheet" href="/css/style.css" />
+<header>
+  <h3>introduing page</h3>
+  <nav>
+    <ul id="flex_box">
+      <li><a href="#">✍️</a></li>
+      <li><a href="#">⚒️</a></li>
+      <li><a href="#">📌</a></li>
     </ul>
+  </nav>
+</header>
+<div class="contain">
+  <section>
+    <div id="image">
+    <img 
+      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSxFkTGKnJoUHyVN4yvgcBhyKw0glxaNRPzYQ&usqp=CAU"
+    />
+    </div>
+    <article>
+      <h2>About me</h2>
 
-  </article>
-</section>
+      <p><h1 id="message">Hello I'm simeee👧</h1></p>
+      <ul>
+        <li>✍️ backend</li>
+        <li>📞 010-1234-5678</li>
+        <li>📧 jump@naver.com</li>
+      </ul>
+    </article>
+  </section>
+</div>
+<div class="contain">
+  <div id="box"></div>
+</div>
 <footer></footer>
