--- a/exp.html
+++ b/exp.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/css/style.css" />
 <header>
-  <h3>introduing page</h3>
+  <h3>introducing page</h3>
   <nav>
     <ul id="flex_box">
       <li><a href="#">✍️</a></li>
