--- a/exp.html
+++ b/exp.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/style.css" />
+<link rel="stylesheet" href="/css/index.css" />
 <header>
   <h3>introducing page</h3>
   <nav>
