--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="/css/index.css" />
   </head>
   <body>
-    <script src="/js/index.js"></script>
+    <div class="js-clock">
+      <h1>00 : 00</h1>
+    </div>
+    <!-- <h1 id="title">Hello</h1>
+    <script src="/js/index2.js"></script> -->
+    <script src="/js/clock.js"></script>
   </body>
 </html>
