--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
     <div class="js-clock">
       <h1>00 : 00</h1>
     </div>
+    <form class="js-form">
+      <input type="text" placeholder="이름이 무엇인가요?" />
+    </form>
+    <h4 class="js-greetings"></h4>
+
     <!-- <h1 id="title">Hello</h1>
     <script src="/js/index2.js"></script> -->
     <script src="/js/clock.js"></script>
+    <script src="/js/greet.js"></script>
   </body>
 </html>
